# gugutos_player

./: .gitattributes  .gitignore  README.md  conf.json
config/: conf-template.json  secrets-template.json
config/systemd/user/: player.service  watchdog.service  watchdog.timer
img/: video.mov
src/: pyproject.toml
src/app/: README.md  main.py  nfc.py  watchdog.py
src/scripts/: get_cache.py
